ligolang/src/test/contracts/negative/switch_jsligo/break_outside_case3.jsligo
let fn = (n : int) : string => {
    let output = "Hello";
    switch (n) {
        case 1: 
            if (output == "") {
                break;
            } else {
                output = output + "World";
            }
        case 2: 
            output = output + "World";
            break;
    };
    return output;
};